# SENG3011_1-group-2-group-3-group-4

./: README.md  asset-manifest.json  index.html  index.md  manage.py  package.json  precache-manifest.1eba0d8dfce1631f7b244c5522c134d6.js  precache-manifest.262f01b8c5f3a357fde58f254a73b73d.js  precache-manifest.8976b6b5fb9c2b71818b9ab1a5c32bf6.js  pyproject.toml  requirements.txt  service-worker.js
PHASE_1/API_Documentation/: swagger.json  swagger.yaml
PHASE_1/API_SourceCode/: D2_tables.txt  api.py  data.json  db.sqlite3  pymongo_test_insert.py  requirements.txt  scraper.py  truScraper.py  trudata.json  updateGeo.py
PHASE_1/API_SourceCode/TestScripts/: conftest.py  test_docs.py  test_index.py  (+1 more)
PHASE_2/frontend/: package-lock.json  package.json
static/css/: 2.805ba59a.chunk.css  2.805ba59a.chunk.css.map  main.2c521535.chunk.css  main.2c521535.chunk.css.map  main.5ff9f1fe.chunk.css  main.5ff9f1fe.chunk.css.map  main.da083319.chunk.css  main.da083319.chunk.css.map
static/js/: 1.a57ed263.chunk.js  1.a57ed263.chunk.js.map  2.5aca395f.chunk.js  2.5aca395f.chunk.js.map  2.799233ee.chunk.js  2.799233ee.chunk.js.map  2.b4570408.chunk.js  2.b4570408.chunk.js.map  3.d5e2ee39.chunk.js  3.d5e2ee39.chunk.js.map  3.ec459d4c.chunk.js  3.ec459d4c.chunk.js.map  main.884ca404.chunk.js  main.884ca404.chunk.js.map  main.ace3af12.chunk.js  main.ace3af12.chunk.js.map  main.f1df5170.chunk.js  main.f1df5170.chunk.js.map  runtime~main.61d2de29.js  runtime~main.61d2de29.js.map  runtime~main.782f123e.js  runtime~main.782f123e.js.map  runtime~main.fc303ece.js  runtime~main.fc303ece.js.map
(+70 files in other folders)
