[tool.poetry]
name = "seng3011_1-group-2-group-3-group-4"
version = "0.1.0"
description = ""
authors = ["Hoshang <z5255679@cse.unsw.edu.au>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
Django = "^4.0.3"
react = "^4.3.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
