[tool.poetry]
name = "seng3011_1-group-2-group-3-group-4"
version = "0.1.0"
description = "Web Scraper"
authors = ["Hoshang, Jiaqi, Joel, Lachlan, William"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
Django = "^4.0.3"
react = "^4.3.0"
pytest = "^7.0.1"
robotframework = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
